# newFFT

FFTupdate/: .cproject  .gitignore  .project  Basis.h  CMakeLists.txt  Chunk.h  ChunkTesting.cuh  F2X.cpp  F2X.h  F2XE.h  FFT.h  GF2.cpp  GF2.h  LinearizedPoly.h  Makefile  cmake_install.cmake  main.cu  multiplicaiton.h  utils.h
FFTupdate/GF/: Basis.h  CMakeLists.txt  CMakeLists.txt~  F2X.cpp  F2X.h  F2XE.cpp  F2XE.h  F2XEX.h  GF2.cpp  LinearizedPoly.h  Makefile  cmake_install.cmake
FFTupdate/GF/Tests/: .gitignore  CMakeLists.txt  GF2_test.cpp  Makefile  cmake_install.cmake  gf2_tests
FFTupdate/GF/headers/: Basis.h  GF2.h
FFTupdate/GF/src/: F2X.cpp
FFTupdate/googletest-master/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
FFTupdate/googletest-master/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
FFTupdate/googletest-master/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
FFTupdate/googletest-master/googletest/make/: sample1_unittest
newFFT/: .cproject  .project  ChunkPOC.cuh  ChunkTesting.cu  F2X.cpp  F2X.h  F2XE.cpp  F2XE.h  main.cu  utils.h
