cmake_minimum_required(VERSION 3.1)
project(gf_library CXX)
find_package(CUDA QUIET REQUIRED)

set(GF_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src CACHE INTERNAL "GF Library Source Dir")
set(GF_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/headers CACHE INTERNAL "GF Library Headers")
add_library(gf STATIC ${GF_SOURCE_DIR}/F2X.cpp ${GF_SOURCE_DIR}/F2XE.cpp ${GF_SOURCE_DIR}/GF2.cpp)
set(GF_LIBRARY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libgf.a CACHE INTERNAL "LIB GF PATH")
target_include_directories(gf PUBLIC ${CUDA_INCLUDE_DIRS} ${GF_INCLUDE_DIR}) 
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -mpclmul)
ADD_SUBDIRECTORY(Tests)
